# OPENDATA

./: 1.md  AGENTS.md  PROJECT_SPEC.md  README.md  convert.py  post.md  pyproject.toml  readme.md  workflows.md
.codex/skills/mindvault-builder/: SKILL.md
docs/: acceptance.md  architecture.md  codex-ops.md  data-model.md  roadmap.md  status.md  workflows.md
sample_data/sources/: chat_source.json  doc_source.json  web_source.json
src/mindvault/: __init__.py  __main__.py  adapters.py  contracts.py  extraction.py  pipeline.py  resolution.py  review.py  taxonomy.py
testdoc/: test1.md
testdoc_run/sources/: test1.json
tests/: test_pipeline.py
workspaces/sample/canonical/: current.json  ontology.json  taxonomy.json
workspaces/sample/config/: intent.json  merge_policy.json
workspaces/sample/extracted/: chunks.json  claims.json  entity_candidates.json  event_candidates.json  relation_candidates.json  schema_candidates.json
workspaces/sample/governance/: confidence_scoring_results.json  conflicts.json  identity_candidates.json  placeholders.json  review_decisions.json  review_outcomes.json  review_queue.json  schema_candidate_queue.json
workspaces/sample/raw/: sources.json
workspaces/sample/reports/: dashboard.md  run_result.json
workspaces/sample/snapshots/: run_20260307_113338.json  run_20260307_113338_changelog.json  run_20260307_113359.json  run_20260307_113359_changelog.json  run_20260307_115245.json  run_20260307_115245_changelog.json  run_20260307_120527.json  run_20260307_120527_changelog.json  run_20260307_122142.json  run_20260307_125035.json  (+10 more)
(+32 files in other folders)
